test/valid/Logic/Biconditional.plume
/**
 * Class to calculate the logical Bicondition operation
 * @author 35237, Marcos Vasco
 */
class Biconditional extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false && val2 == false then true
    else if val1 == true && val2 == true then true
    else false